[BZ #5737]

2008-02-15  Ulrich Drepper  <drepper@redhat.com>
	[BZ #5737]
	* resolv/netdb.h: Make NI_MAXHOST and NI_MAXSERV available when
	__USE_MISC is defined.